--- a/public/index.html
+++ b/public/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <title>Ionic E-Commerce App</title>
+    <title>Go To Chef</title>
 
     <base href="/" />
 
@@ -24,7 +24,7 @@
 
     <!-- add to homescreen for ios -->
     <meta name="apple-mobile-web-app-capable" content="yes" />
-    <meta name="apple-mobile-web-app-title" content="Ionic E-Commerce App" />
+    <meta name="apple-mobile-web-app-title" content="Go To Chef" />
     <meta name="apple-mobile-web-app-status-bar-style" content="black" />
   </head>
 
